# PolyApp

./: .gitignore  pre-commit.sh  pyproject.toml
.github/workflows/: ci.yml
generate_llm_yaml/: ENV_EXAMPLE.txt  README.md  generate_yaml.py  main.py  models.py
generate_llm_yaml/output/: lesson.yaml  short.yaml
generate_llm_yaml/schemas/: lesson_schema.json  short_schema.json
tests/: test_models.py
